# caustics

./: 404.html  CMakeLists.txt  LICENSE  README.md  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: tests.yml
api/extended_source/: index.html
api/lightcurve/: index.html
api/linalg/: index.html
api/point_source/: index.html
api/trajectory/: index.html
docs/: index.md
docs/api/: extended_source.md  lightcurve.md  linalg.md  point_source.md  trajectory.md
lib/ehrlich_aberth/: acc_sum.h  cpu_ops.cc  eft.h  ehrlich_aberth.h  gpu_ops.cc  horner.h  init_est.h  kernel_helpers.h  kernels.cc.cu  kernels.h  pybind11_kernel_helpers.h
lib/integrate_image/: cpu_ops.cc  gpu_ops.cc  kernel_helpers.h  kernels.cc.cu  kernels.h  pybind11_kernel_helpers.h
notebooks/: ComplexPolynomialCoefficients.ipynb  Logo.ipynb  RootSolverGradients.ipynb  SemiAnalyticMethod-Keming.ipynb
search/: search_index.json
src/caustics/: __init__.py  ehrlich_aberth_primitive.py  extended_source.py  extended_source_magnification.py  inegrate_image_primitive.py  integrate.py  integrate_image_primitive.py  lightcurve.py  linalg.py  multipole.py  ops.py  point_source.py  point_source_magnification.py  trajectory.py  utils.py
tests/: test_ehrlich_aberth_primitive.py  test_extended_source.py  test_extended_source_magnification.py  test_lightcurve.py  test_ops.py  test_point_source_magnification.py  test_trajectory.py  test_utils.py
